// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sub instruction compiler > emits F32_SUB for float operands 1`] = `
{
  "loopSegmentByteCode": [
    147,
  ],
  "stack": [
    {
      "isInteger": false,
      "isNonZero": false,
    },
  ],
}
`;

exports[`sub instruction compiler > emits I32_SUB for integer operands 1`] = `
{
  "loopSegmentByteCode": [
    107,
  ],
  "stack": [
    {
      "isInteger": true,
      "isNonZero": false,
    },
  ],
}
`;
